fixed jumping affix

--- a/css/everit.css
+++ b/css/everit.css
@@ -79,7 +79,7 @@ a:focus {
     }
     .affix {
         margin-left: 30px;
-        top: 50px;
+        top: 0px;
         width: auto;
         position: fixed;
     }
